DoctorsController methods vith viewModels all done

--- a/DoctorsOffice/Views/Doctors/Create.cshtml
+++ b/DoctorsOffice/Views/Doctors/Create.cshtml
@@ -70,7 +70,9 @@
                 <div class="form-group dark-text">
                     @Html.Label("Photo", new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                        <input type="file" id="Picture" name="upload" />
+                        @*<input type="file" id="Picture" name="upload" />*@
+                        @*@Html.TextBoxFor(model => model.File, new { type = "file", name = "upload" })
+                        @Html.ValidationMessageFor(model => model.File, "", new { @class = "text-danger" })*@
                     </div>
                 </div>
             </div>
