Create doctor with img upload done

--- a/DoctorsOffice/Views/Doctors/Create.cshtml
+++ b/DoctorsOffice/Views/Doctors/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model DoctorsOffice.ViewModels.DoctorBriefViewModel
+﻿@model DoctorsOffice.ViewModels.DoctorCreateViewModel
 @{
     ViewBag.Title = "Create";
 }
@@ -20,49 +20,49 @@
             </div>
             <div class="row">
                 <div class="form-group col-md-6 dark-text">
-                    @Html.LabelFor(model => model.FirstName, htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.LabelFor(model => model.Doctor.FirstName, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                        @Html.EditorFor(model => model.FirstName, new { htmlAttributes = new { @class = "form-control input-fields" } })
-                        @Html.ValidationMessageFor(model => model.FirstName, "", new { @class = "text-danger" })
+                        @Html.EditorFor(model => model.Doctor.FirstName, new { htmlAttributes = new { @class = "form-control input-fields" } })
+                        @Html.ValidationMessageFor(model => model.Doctor.FirstName, "", new { @class = "text-danger" })
                     </div>
                 </div>
                 <div class="form-group col-md-6 dark-text">
-                    @Html.LabelFor(model => model.Address, htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.LabelFor(model => model.Doctor.Address, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                        @Html.EditorFor(model => model.Address, new { htmlAttributes = new { @class = "form-control input-fields" } })
-                        @Html.ValidationMessageFor(model => model.Address, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="form-group col-md-6 dark-text">
-                    @Html.LabelFor(model => model.LastName, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.LastName, new { htmlAttributes = new { @class = "form-control input-fields" } })
-                        @Html.ValidationMessageFor(model => model.LastName, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-                <div class="form-group col-md-6 dark-text">
-                    @Html.LabelFor(model => model.PhoneNumber, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.PhoneNumber, new { htmlAttributes = new { @class = "form-control input-fields" } })
-                        @Html.ValidationMessageFor(model => model.PhoneNumber, "", new { @class = "text-danger" })
+                        @Html.EditorFor(model => model.Doctor.Address, new { htmlAttributes = new { @class = "form-control input-fields" } })
+                        @Html.ValidationMessageFor(model => model.Doctor.Address, "", new { @class = "text-danger" })
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="form-group col-md-6 dark-text">
-                    @Html.LabelFor(model => model.Position, htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.LabelFor(model => model.Doctor.LastName, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                        @Html.EditorFor(model => model.Position, new { htmlAttributes = new { @class = "form-control input-fields" } })
-                        @Html.ValidationMessageFor(model => model.Position, "", new { @class = "text-danger" })
+                        @Html.EditorFor(model => model.Doctor.LastName, new { htmlAttributes = new { @class = "form-control input-fields" } })
+                        @Html.ValidationMessageFor(model => model.Doctor.LastName, "", new { @class = "text-danger" })
                     </div>
                 </div>
                 <div class="form-group col-md-6 dark-text">
-                    @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.LabelFor(model => model.Doctor.PhoneNumber, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                        @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control input-fields" } })
-                        @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
+                        @Html.EditorFor(model => model.Doctor.PhoneNumber, new { htmlAttributes = new { @class = "form-control input-fields" } })
+                        @Html.ValidationMessageFor(model => model.Doctor.PhoneNumber, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="form-group col-md-6 dark-text">
+                    @Html.LabelFor(model => model.Doctor.Position, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.Doctor.Position, new { htmlAttributes = new { @class = "form-control input-fields" } })
+                        @Html.ValidationMessageFor(model => model.Doctor.Position, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+                <div class="form-group col-md-6 dark-text">
+                    @Html.LabelFor(model => model.Doctor.Email, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.Doctor.Email, new { htmlAttributes = new { @class = "form-control input-fields" } })
+                        @Html.ValidationMessageFor(model => model.Doctor.Email, "", new { @class = "text-danger" })
                     </div>
                 </div>
             </div>
@@ -71,8 +71,8 @@
                     @Html.Label("Photo", new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
                         @*<input type="file" id="Picture" name="upload" />*@
-                        @*@Html.TextBoxFor(model => model.File, new { type = "file", name = "upload" })
-                        @Html.ValidationMessageFor(model => model.File, "", new { @class = "text-danger" })*@
+                        @Html.TextBoxFor(model => model.Image.ImgUpload, new { type = "file", name = "upload" })
+                        @Html.ValidationMessageFor(model => model.Image.ImgUpload, "", new { @class = "text-danger" })
                     </div>
                 </div>
             </div>
