Upload and display image done in all methods in doctor controller

--- a/DoctorsOffice/Views/Doctors/Delete.cshtml
+++ b/DoctorsOffice/Views/Doctors/Delete.cshtml
@@ -6,7 +6,7 @@
 
 <h2 class="dark-text">Delete doctor</h2>
 <hr />
-
+<img src="@(Url.Content(Model.Image.ImgUrl))" />
 <div>
     
     <div class="alert alert-info fade show blue-bckg font-weight-bold mon dark-text" role="alert">
