--- a/DoctorsOffice/Views/Shared/_Layout.cshtml
+++ b/DoctorsOffice/Views/Shared/_Layout.cshtml
@@ -67,6 +67,7 @@
     </div>
     <footer class="pl-5 py-2 dark-blue-bckg light-text">
         <p>&copy; @DateTime.Now.Year - Doctor's Office</p>
+        <a href="https://pngtree.com/">Default doctor photo graphic from pngtree.com</a>
     </footer>
 
 
