--- a/DoctorsOffice/Views/Doctors/Details.cshtml
+++ b/DoctorsOffice/Views/Doctors/Details.cshtml
@@ -7,8 +7,9 @@
 <h2 class="dark-text">Doctor's details</h2>
 
 <div>
-    
+
     <hr />
+    <img src="@(Url.Content(Model.Image.ImgUrl))" class="float-right"/>
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.Doctor.FirstName)
