--- a/DoctorsOffice/Views/Doctors/Details.cshtml
+++ b/DoctorsOffice/Views/Doctors/Details.cshtml
@@ -9,7 +9,7 @@
 <div>
 
     <hr />
-    <img src="@(Url.Content(Model.Image.ImgUrl))" class="float-right"/>
+    <img src="@(Url.Content(Model.Image.ImgUrl))?w=200&h=200" class="float-right"/>
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.Doctor.FirstName)
