--- a/DoctorsOffice/Views/Shared/_Layout.cshtml
+++ b/DoctorsOffice/Views/Shared/_Layout.cshtml
@@ -8,32 +8,10 @@
     @Scripts.Render("~/bundles/modernizr")
 
 </head>
-<body>
-    @*<div class="navbar navbar-inverse navbar-fixed-top dark-blue-bckg">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    @Html.ActionLink("Doctor's Office", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-                </div>
-                <div class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav">
-                        <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                        <li>@Html.ActionLink("About", "About", "Home")</li>
-                        <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                        <li>@Html.ActionLink("Doctors", "Index", "Doctors")</li>
-                        <li>@Html.ActionLink("Patients", "Index", "Patients")</li>
-                        <li>@Html.ActionLink("Examinations", "Index", "Examinations")</li>
-                    </ul>
-                    @Html.Partial("_LoginPartial")
-                </div>
-            </div>
-        </div>*@
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark dark-blue-bckg">
-        @*@Html.ActionLink("Logo", "About", "Home")*@
+<body class="w-100">
+    
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark dark-blue-bckg w-100">
+        
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -62,12 +40,18 @@
             @Html.Partial("_LoginPartial")
         </div>
     </nav>
-    <div class="container body-content main-container">
+
+    <div class="container body-content main-container w-100">
         @RenderBody()
     </div>
-    <footer class="pl-5 py-2 dark-blue-bckg light-text">
-        <p>&copy; @DateTime.Now.Year - Doctor's Office</p>
-        <a href="https://pngtree.com/">Default doctor photo graphic from pngtree.com</a>
+
+    <footer class="py-2 dark-blue-bckg light-text w-100">
+        <div class="row">
+            <p class="col-md-6 text-left pl-5">&copy; @DateTime.Now.Year - Doctor's Office</p>
+            <div class="col-md-6 text-right">
+                <a href="https://pngtree.com/" class=" pr-5">Default doctor photo graphic from pngtree.com</a>
+            </div>
+        </div>
     </footer>
 
 
