--- a/DoctorsOffice/Views/Patients/Delete.cshtml
+++ b/DoctorsOffice/Views/Patients/Delete.cshtml
@@ -1,14 +1,14 @@
-﻿@model DoctorsOffice.Data.Patient
+﻿@model DoctorsOffice.ViewModels.PatientDeleteViewModel
 
 @{
     ViewBag.Title = "Delete";
 }
 
 <h2 class="dark-text">Delete patient</h2>
-
-<h3 class="dark-text">Are you sure you want to delete this?</h3>
-<div>
-    <h4 class="dark-text">Patient</h4>
+<div class="col-md-9">
+    <div class="alert alert-info fade show blue-bckg font-weight-bold mon dark-text" role="alert">
+        @Html.DisplayFor(model => model.Alert)
+    </div>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -16,7 +16,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.PatientSocialSecurityNumber)
+            @Html.DisplayFor(model => model.PatientSocSecurityNum)
         </dd>
 
         <dt>
@@ -24,15 +24,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.LastName)
-        </dd>
-
-        <dt>
-            Personal Doctor
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.PersonalDoctor.LastName)
+            @Html.DisplayFor(model => model.FullName)
         </dd>
 
         <dt>
@@ -59,41 +51,10 @@
             @Html.DisplayFor(model => model.Email)
         </dd>
 
-        <dt>
-            Date of Birth
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.DateOfBirth)
-        </dd>
-
-        <dt>
-            Height
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Height)
-        </dd>
-
-        <dt>
-            Weight
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Weight)
-        </dd>
-
-        <dt>
-            Bloodtype
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.BloodType)
-        </dd>
-
     </dl>
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
 
         <div class="dark-text">
